# disman

./: .gitlab-ci.yml  .versionrc.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Disman.categories  DismanConfig.cmake.in  README.md
.github/workflows/: change.yml  rebuild.yml
autotests/: CMakeLists.txt  config.cpp  generator.cpp  testbackendloader.cpp  testconfigmonitor.cpp  testconfigserializer.cpp  testedid.cpp  testinprocess.cpp  testkwaylandbackend.cpp  testkwaylandconfig.cpp  testkwaylanddpms.cpp  testlog.cpp  testmodelistchange.cpp  testqscreenbackend.cpp  testscreenconfig.cpp  testxrandr.cpp  wayland_backend.cpp  wayland_config.cpp  wayland_dpms.cpp
autotests/configs/: default.json  multipleclone.json  multipleoutput.json  singleOutputWithoutPreferred.json  singleoutput.json  singleoutputBroken.json  tooManyOutputs.json
backends/: CMakeLists.txt  backend_impl.cpp  backend_impl.h  device.cpp  device.h  edid.cpp  edid.h  filer.h  filer_controller.cpp  filer_controller.h  filer_helpers.h  logging.cpp  logging.h  output_filer.h  utils.cpp  utils.h  xcbeventlistener.cpp  xcbeventlistener.h
backends/fake/: CMakeLists.txt  fake.cpp  fake.h  parser.cpp  parser.h
backends/kwayland/: CMakeLists.txt  DismanWaylandConfig.cmake.in  README.md  disman-wayland.pc.in  waylandbackend.cpp  waylandbackend.h  waylandconfig.cpp  waylandconfig.h  waylandoutput.cpp  waylandoutput.h  waylandscreen.cpp  waylandscreen.h
backends/kwayland/plugins/: CMakeLists.txt
backends/kwayland/plugins/kwayland/: CMakeLists.txt  kwayland.json  kwayland_interface.cpp  kwayland_output.cpp
backends/kwayland/plugins/kwinft/: CMakeLists.txt  kwinft.json  kwinft_interface.cpp  kwinft_output.cpp  kwinft_output.h
backends/kwayland/plugins/wlroots-wrapland/: wlroots_output.cpp
backends/qscreen/: CMakeLists.txt  qscreenbackend.cpp  qscreenbackend.h  qscreenconfig.cpp  qscreenconfig.h  qscreenoutput.cpp  qscreenoutput.h  qscreenscreen.cpp  qscreenscreen.h
backends/wayland/: CMakeLists.txt  DismanWaylandConfig.cmake.in  dismanwl-config.cmake.in  dismanwl.pc.in  wayland_interface.cpp  wayland_interface.h  waylandbackend.cpp  waylandbackend.h  waylandconfig.cpp  waylandconfig.h  waylandoutput.cpp  waylandoutput.h  waylandscreen.cpp  waylandscreen.h
backends/wayland/plugins/: CMakeLists.txt
backends/wayland/plugins/kwayland/: CMakeLists.txt  kwayland_interface.cpp  kwayland_interface.h  kwayland_output.cpp  kwayland_output.h
backends/wayland/plugins/kwinft/: CMakeLists.txt  kwinft_interface.cpp  kwinft_interface.h  kwinft_output.cpp  kwinft_output.h
backends/wayland/plugins/wlroots/: CMakeLists.txt  wlroots-wrapland.json  wlroots_interface.cpp  wlroots_output.cpp  wlroots_output.h
backends/wayland/plugins/wlroots-wrapland/: CMakeLists.txt  wlroots_interface.cpp  wlroots_interface.h  wlroots_output.cpp  wlroots_output.h
backends/xrandr/: CMakeLists.txt  xcbeventlistener.cpp  xcbeventlistener.h  xcbwrapper.cpp  xcbwrapper.h  xrandr.cpp  xrandr.h  xrandrconfig.cpp  xrandrconfig.h  xrandrcrtc.cpp  xrandrcrtc.h  xrandrmode.cpp  xrandrmode.h  xrandroutput.cpp  xrandroutput.h  xrandrscreen.cpp  xrandrscreen.h
backends/xrandr1.1/: CMakeLists.txt  xrandr11.cpp  xrandr11.h
ci/: commitlint.config.js
ci/compliance/: commitlint.config.js
ci/release/: beta-prepare.sh  beta-update-prepare.sh  stable-minor-prepare.sh  stable-prepare.sh
cmake/modules/: Packing.cmake
ctl/: CMakeLists.txt  doctor.cpp  doctor.h  dpmsclient.h  main.cpp  watcher.cpp  watcher.h
doctor/: CMakeLists.txt  doctor.cpp
interfaces/: org.kwinft.disman.backend.xml  org.kwinft.disman.fakebackend.xml  org.kwinft.disman.xml
lib/: CMakeLists.txt  DismanConfig.cmake.in  abstractbackend.cpp  abstractbackend.h  backend.cpp  backend.h  backendmanager.cpp  backendmanager_p.h  config.cpp  config.h  configmonitor.cpp  configmonitor.h  configoperation.cpp  configoperation.h  configoperation_p.h  configserializer.cpp  configserializer_p.h  disman-config.cmake.in  disman.pc.in  edid.cpp  edid.h  generator.cpp  generator.h  getconfigoperation.cpp  getconfigoperation.h  log.cpp  log.h  mode.cpp  mode.h  output.cpp  output.h  output_p.h  screen.cpp  screen.h  setconfigoperation.cpp  types.h
man/: CMakeLists.txt  disman.md  dismanctl.1
service/: CMakeLists.txt  backenddbuswrapper.cpp  backenddbuswrapper.h  backendloader.cpp  backendloader.h  main.cpp  org.kwinft.disman.service.cmake
src/: CMakeLists.txt  abstractbackend.cpp  abstractbackend.h  backendmanager.cpp  backendmanager_p.h  config.cpp  config.h  configmonitor.cpp  configmonitor.h  configoperation.cpp  configoperation.h  configoperation_p.h  configserializer.cpp  configserializer_p.h  disman.pc.in  edid.cpp  edid.h  generator.cpp  generator.h  getconfigoperation.cpp  getconfigoperation.h  log.cpp  log.h  mode.cpp  mode.h  output.cpp  output.h  output_p.h  screen.cpp  screen.h  setconfigoperation.cpp  setconfigoperation.h  types.h
src/backendlauncher/: CMakeLists.txt  backenddbuswrapper.cpp  backenddbuswrapper.h  backendloader.cpp  backendloader.h  main.cpp  org.kwinft.disman.service.cmake
src/doctor/: CMakeLists.txt  doctor.cpp  doctor.h  dpmsclient.cpp  dpmsclient.h  main.cpp
tests/: CMakeLists.txt  testplugandplay.cpp  testpnp.cpp  testpnp.h
tests/kwayland/: CMakeLists.txt  main.cpp  waylandconfigreader.cpp  waylandconfigreader.h  waylandtestserver.cpp  waylandtestserver.h
tests/wayland/: CMakeLists.txt  config_reader.cpp  config_reader.h  main.cpp  server.cpp  server.h
tooling/: README.md
tooling/docs/: commitlint.config.js
tooling/release/: stable-minor-prepare.sh  stable-patch-prepare.sh
